--- a/client/src/components/app.css
+++ b/client/src/components/app.css
@@ -34,8 +34,15 @@ body {
   cursor: pointer;
   margin-top:20px;
   padding: 5px;
+  font-size: small;
+  color: black;
+  margin: 1%;
+  cursor: pointer;
 }
-
+.sm-btn:hover {
+  background: lightgray;
+  color: white;
+}
 input {
   margin-left: 5px;
   margin-right: 10px;
@@ -49,3 +56,45 @@ input {
   align-items: center;
 }
 
+.modal-content{
+  transform: scale(0.5);
+  background-color: white;
+  position: absolute;
+  top:50%;
+  left:50%;
+  right:auto;
+  bottom: auto;
+  width:80%;
+  padding:1%;
+  border-radius: 5px;
+  border: 2px solid black;
+  transform: translate(-50%, -50%);
+}
+
+.display-block {
+  display: block;
+  z-index: 9000;
+}
+
+.display-none {
+  display: none;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+  z-index: 9000;
+}
+.close{
+  color:rgb(161, 158, 158);
+  transform: scale(2);
+  float:right;
+}
+.close:hover{
+  color: rgb(38, 168, 67);
+  cursor:pointer;
+}
